@@ -16,6 +16,8 @@ VERSION 2.8-Beta 1
    * Added Ctrl+H shortcut to randomize playlist, patch by Harsh Gupta. (BR 208061)
 
   CHANGES:
+   * Add prepareToQuit() signal to Amarok.Window script bindings; patch by
+     Anmol Ahuja. (BR 241066)
    * Data CDs are now recognized in Amarok; patch by Anmol Ahuja. (BR 316128)
    * On-Screen-Display now uses the system font instead of hardcoded sans-serif
      (BR 248707)
